--- a/be-online-shop/package.json
+++ b/be-online-shop/package.json
@@ -14,10 +14,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "prisma": "^5.21.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/node": "^22.8.6",
     "ts-node": "^10.9.2",
